// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add Block should build the Add block 1`] = `
AddBlock {
  "cancel_text": "Don’t need to add this item",
  "id": "add-block-add-item-page-title",
  "page_title": "Add item page title",
  "question": Object {
    "answers": Array [
      Answer {
        "id": "answeranswer-1",
        "mandatory": false,
        "type": undefined,
      },
    ],
    "id": "add-block-question-add-item-page-title",
    "title": "Enter details",
    "type": "General",
  },
  "type": "ListAddQuestion",
}
`;

exports[`Edit Block should build the Edit block 1`] = `
EditBlock {
  "cancel_text": "Don’t need to edit this item",
  "id": "edit-block-add-item-page-title",
  "page_title": "Add item page title",
  "question": Object {
    "answers": Array [
      Answer {
        "id": "answeranswer-1",
        "mandatory": false,
        "type": undefined,
      },
    ],
    "id": "edit-block-question-add-item-page-title",
    "title": "Enter details",
    "type": "General",
  },
  "type": "ListEditQuestion",
}
`;

exports[`Remove Block should build the remove block 1`] = `
RemoveBlock {
  "cancel_text": "Don’t need to remove this item?",
  "id": "remove-block-add-item-page-title",
  "question": Object {
    "answers": Array [
      Object {
        "id": "remove-confirmation-add-item-page",
        "mandatory": true,
        "options": Array [
          Object {
            "action": Object {
              "type": "RemoveListItemAndAnswers",
            },
            "label": "Yes",
            "value": "Yes",
          },
          Object {
            "label": "No",
            "value": "No",
          },
        ],
        "type": "Radio",
      },
    ],
    "id": "remove-block-question-add-item-page-title",
    "title": "Are you sure you want to remove this item?",
    "type": "General",
    "warning": "All of the information about this item will be deleted",
  },
  "type": "ListRemoveQuestion",
}
`;

exports[`Summary Block should build the Summary block 1`] = `
SummaryBlock {
  "item_title": Object {
    "placeholders": Array [
      Object {
        "placeholder": "listcollector_summary_placeholder",
        "transforms": Array [
          Object {
            "arguments": Object {
              "delimiter": "&nbsp;",
              "list_to_concatenate": Array [],
            },
            "transform": "concatenate_list",
          },
        ],
      },
    ],
    "text": "{listcollector_summary_placeholder}",
  },
  "title": "Summary",
}
`;

exports[`list collector question should build valid list collector question 1`] = `
ListCollectorQuestion {
  "answers": Array [
    Object {
      "id": "add-another-confirmation-page",
      "mandatory": true,
      "options": Array [
        Object {
          "action": Object {
            "type": "RedirectToListAddBlock",
          },
          "label": "Yes",
          "value": "Yes",
        },
        Object {
          "label": "No",
          "value": "No",
        },
      ],
      "type": "Radio",
    },
  ],
  "id": "list-collector-question-confirmation-page",
  "title": "Add another",
  "type": "General",
}
`;
